# trading-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: order.h  orderBook.h  trader.h  uuid.h
src/: main.cpp  order.cpp  orderBook.cpp  trader.cpp  uuid.cpp
